--- a/chat/src/pages/home.css
+++ b/chat/src/pages/home.css
@@ -18,10 +18,11 @@
   color: #e6f7ff;
   overflow: hidden;
 }
+ 
+ 
+ 
 
 .chat-container {
-  display: grid;
-  width: 90%;
   max-width: 1400px;
   height: 90vh;
   border-radius: 25px;
@@ -29,8 +30,12 @@
   background: rgba(15, 25, 35, 0.55);
   backdrop-filter: blur(20px);
   border: 1px solid rgba(0, 255, 255, 0.15);
-  
   transition: all 0.4s ease-in-out;
+  display: grid;
+  flex-direction: row;
+  flex-wrap: nowrap; 
+  width: 100%;
+  height: 95vh; 
 }
 
  
